--- a/Coup/Coup/Base.lproj/Main.storyboard
+++ b/Coup/Coup/Base.lproj/Main.storyboard
@@ -405,7 +405,7 @@
         <scene sceneID="OSA-Mi-CWu">
             <objects>
                 <viewController id="WSx-xW-JoZ" customClass="SettingsViewController" customModule="Coup" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="e0g-aO-Dso">
+                    <view key="view" contentMode="scaleToFill" id="e0g-aO-Dso">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -415,8 +415,8 @@
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="35"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fmu-un-gM0">
-                                <rect key="frame" x="95" y="133" width="200" height="200"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fmu-un-gM0">
+                                <rect key="frame" x="95" y="177" width="200" height="210"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Flq-0q-0HH"/>
                                     <constraint firstAttribute="height" constant="200" id="dfh-N0-10B"/>
@@ -763,7 +763,7 @@
                                     <constraint firstAttribute="height" constant="44" id="Gnl-qT-Hnb"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="23"/>
-                                <state key="normal" title="I will keep my current card(s)">
+                                <state key="normal" title="I will keep my current card">
                                     <color key="titleColor" systemColor="labelColor"/>
                                 </state>
                                 <connections>
